fix: update keyboard shortcut from Ctrl + T to Alt + T in documentation and code

--- a/popup.html
+++ b/popup.html
@@ -178,7 +178,7 @@
     <div class="shortcuts">
       <div class="shortcut-item">• 选中文本后点击翻译按钮</div>
       <div class="shortcut-item">• 右键菜单选择"翻译选中文本"</div>
-      <div class="shortcut-item">• 快捷键: Ctrl + T</div>
+      <div class="shortcut-item">• 快捷键: Alt + T</div>
     </div>
   </div>
 
