--- a/popup.html
+++ b/popup.html
@@ -7,182 +7,318 @@
   <style>
     body {
       width: 300px;
-      padding: 16px;
+      padding: 0;
       margin: 0;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: #f8f9fa;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      min-height: 400px;
+      position: relative;
+      overflow-x: hidden;
+    }
+
+    .container {
+      padding: 16px;
+      position: relative;
+      z-index: 1;
+    }
+
+    .background-pattern {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: 
+        radial-gradient(circle at 20% 80%, rgba(255,255,255,0.1) 0%, transparent 50%),
+        radial-gradient(circle at 80% 20%, rgba(255,255,255,0.1) 0%, transparent 50%),
+        radial-gradient(circle at 40% 40%, rgba(255,255,255,0.05) 0%, transparent 50%);
+      z-index: 0;
     }
 
     .header {
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 24px;
+      padding: 20px 0;
     }
 
     .logo {
-      font-size: 24px;
-      margin-bottom: 8px;
+      font-size: 36px;
+      margin-bottom: 12px;
+      display: inline-block;
+      padding: 12px;
+      background: rgba(255,255,255,0.15);
+      border-radius: 20px;
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255,255,255,0.2);
+      box-shadow: 0 8px 32px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease;
+    }
+
+    .logo:hover {
+      transform: scale(1.05);
     }
 
     .title {
-      font-size: 18px;
-      font-weight: 600;
-      color: #333;
+      font-size: 20px;
+      font-weight: 700;
+      color: white;
       margin: 0;
+      text-shadow: 0 2px 4px rgba(0,0,0,0.2);
+      letter-spacing: 0.5px;
     }
 
     .subtitle {
-      font-size: 12px;
-      color: #666;
-      margin: 4px 0 0 0;
+      font-size: 13px;
+      color: rgba(255,255,255,0.8);
+      margin: 8px 0 0 0;
+      font-weight: 400;
     }
 
     .section {
-      background: white;
-      border-radius: 8px;
-      padding: 16px;
-      margin-bottom: 12px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+      background: rgba(255,255,255,0.95);
+      backdrop-filter: blur(20px);
+      border-radius: 16px;
+      padding: 20px;
+      margin-bottom: 16px;
+      box-shadow: 
+        0 8px 32px rgba(0,0,0,0.1),
+        0 1px 3px rgba(0,0,0,0.05);
+      border: 1px solid rgba(255,255,255,0.3);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+
+    .section:hover {
+      transform: translateY(-2px);
+      box-shadow: 
+        0 12px 40px rgba(0,0,0,0.15),
+        0 2px 6px rgba(0,0,0,0.08);
     }
 
     .section-title {
-      font-size: 14px;
-      font-weight: 600;
-      color: #333;
-      margin: 0 0 12px 0;
+      font-size: 16px;
+      font-weight: 700;
+      color: #2d3748;
+      margin: 0 0 16px 0;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .section-title::before {
+      content: '';
+      width: 4px;
+      height: 20px;
+      background: linear-gradient(135deg, #667eea, #764ba2);
+      border-radius: 2px;
     }
 
     .toggle-container {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 12px;
+      margin-bottom: 16px;
+      padding: 12px 16px;
+      background: rgba(102,126,234,0.05);
+      border-radius: 12px;
+      border: 1px solid rgba(102,126,234,0.1);
+      transition: all 0.2s ease;
+    }
+
+    .toggle-container:hover {
+      background: rgba(102,126,234,0.08);
+      border-color: rgba(102,126,234,0.2);
     }
 
     .toggle-label {
-      font-size: 14px;
-      color: #333;
+      font-size: 15px;
+      color: #2d3748;
+      font-weight: 500;
     }
 
     .toggle {
       position: relative;
-      width: 44px;
-      height: 24px;
-      background: #ccc;
-      border-radius: 12px;
+      width: 52px;
+      height: 28px;
+      background: linear-gradient(135deg, #e2e8f0, #cbd5e0);
+      border-radius: 14px;
       cursor: pointer;
-      transition: background 0.3s;
+      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+      box-shadow: 
+        inset 0 2px 4px rgba(0,0,0,0.1),
+        0 1px 3px rgba(0,0,0,0.1);
     }
 
     .toggle.active {
-      background: #4285f4;
+      background: linear-gradient(135deg, #667eea, #764ba2);
+      box-shadow: 
+        inset 0 2px 4px rgba(0,0,0,0.2),
+        0 2px 8px rgba(102,126,234,0.3);
     }
 
     .toggle-slider {
       position: absolute;
-      top: 2px;
-      left: 2px;
-      width: 20px;
-      height: 20px;
+      top: 3px;
+      left: 3px;
+      width: 22px;
+      height: 22px;
       background: white;
       border-radius: 50%;
-      transition: transform 0.3s;
+      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+      box-shadow: 
+        0 2px 6px rgba(0,0,0,0.2),
+        0 1px 3px rgba(0,0,0,0.1);
     }
 
     .toggle.active .toggle-slider {
-      transform: translateX(20px);
+      transform: translateX(24px);
+      box-shadow: 
+        0 3px 8px rgba(0,0,0,0.3),
+        0 1px 4px rgba(0,0,0,0.2);
     }
 
     .select-container {
-      margin-bottom: 12px;
+      margin-bottom: 16px;
     }
 
     .select-label {
-      font-size: 14px;
-      color: #333;
-      margin-bottom: 6px;
+      font-size: 15px;
+      color: #2d3748;
+      margin-bottom: 8px;
       display: block;
+      font-weight: 500;
     }
 
     select {
       width: 100%;
-      padding: 8px 12px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
+      padding: 12px 16px;
+      border: 2px solid rgba(102,126,234,0.1);
+      border-radius: 12px;
       font-size: 14px;
       background: white;
+      color: #2d3748;
+      font-weight: 500;
+      transition: all 0.2s ease;
+      cursor: pointer;
+      appearance: none;
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='m6 8 4 4 4-4'/%3e%3c/svg%3e");
+      background-position: right 12px center;
+      background-repeat: no-repeat;
+      background-size: 16px;
+      padding-right: 40px;
+    }
+
+    select:focus {
+      outline: none;
+      border-color: #667eea;
+      box-shadow: 0 0 0 3px rgba(102,126,234,0.1);
+    }
+
+    select:hover {
+      border-color: rgba(102,126,234,0.2);
     }
 
     .shortcuts {
-      font-size: 12px;
-      color: #666;
-      line-height: 1.4;
+      font-size: 13px;
+      color: #4a5568;
+      line-height: 1.6;
     }
 
     .shortcut-item {
-      margin-bottom: 4px;
+      margin-bottom: 8px;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      padding: 8px 12px;
+      background: rgba(102,126,234,0.05);
+      border-radius: 8px;
+      border-left: 3px solid #667eea;
+    }
+
+    .shortcut-item::before {
+      content: '→';
+      color: #667eea;
+      font-weight: bold;
     }
 
     .status {
       text-align: center;
-      padding: 8px;
-      border-radius: 4px;
-      font-size: 12px;
-      margin-top: 12px;
+      padding: 12px 16px;
+      border-radius: 12px;
+      font-size: 13px;
+      margin-top: 16px;
+      font-weight: 500;
+      animation: slideIn 0.3s ease;
+    }
+
+    @keyframes slideIn {
+      from {
+        opacity: 0;
+        transform: translateY(-10px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     .status.success {
-      background: #e8f5e8;
-      color: #2e7d32;
+      background: linear-gradient(135deg, #d4edda, #c3e6cb);
+      color: #155724;
+      border: 1px solid #c3e6cb;
     }
 
     .status.error {
-      background: #ffebee;
-      color: #c62828;
+      background: linear-gradient(135deg, #f8d7da, #f5c6cb);
+      color: #721c24;
+      border: 1px solid #f5c6cb;
     }
   </style>
 </head>
 <body>
-  <div class="header">
-    <div class="logo">🌐</div>
-    <h1 class="title">沉浸式翻译</h1>
-    <p class="subtitle">基于 Pollinations AI</p>
-  </div>
+  <div class="background-pattern"></div>
+  <div class="container">
+    <div class="header">
+      <div class="logo">🌐</div>
+      <h1 class="title">沉浸式翻译</h1>
+      <p class="subtitle">基于 Pollinations AI</p>
+    </div>
 
-  <div class="section">
-    <h2 class="section-title">设置</h2>
+    <div class="section">
+      <h2 class="section-title">设置</h2>
 
-    <div class="toggle-container">
-      <span class="toggle-label">启用翻译</span>
-      <div class="toggle active" id="enableToggle">
-        <div class="toggle-slider"></div>
+      <div class="toggle-container">
+        <span class="toggle-label">启用翻译</span>
+        <div class="toggle active" id="enableToggle">
+          <div class="toggle-slider"></div>
+        </div>
+      </div>
+
+      <div class="select-container">
+        <label class="select-label" for="targetLanguage">目标语言</label>
+        <select id="targetLanguage">
+          <option value="中文">中文</option>
+          <option value="English">English</option>
+          <option value="日本語">日本語</option>
+          <option value="한국어">한국어</option>
+          <option value="Français">Français</option>
+          <option value="Deutsch">Deutsch</option>
+          <option value="Español">Español</option>
+          <option value="Русский">Русский</option>
+        </select>
       </div>
     </div>
 
-    <div class="select-container">
-      <label class="select-label" for="targetLanguage">目标语言</label>
-      <select id="targetLanguage">
-        <option value="中文">中文</option>
-        <option value="English">English</option>
-        <option value="日本語">日本語</option>
-        <option value="한국어">한국어</option>
-        <option value="Français">Français</option>
-        <option value="Deutsch">Deutsch</option>
-        <option value="Español">Español</option>
-        <option value="Русский">Русский</option>
-      </select>
+    <div class="section">
+      <h2 class="section-title">使用方法</h2>
+      <div class="shortcuts">
+        <div class="shortcut-item">选中文本后点击翻译按钮</div>
+        <div class="shortcut-item">右键菜单选择"翻译选中文本"</div>
+        <div class="shortcut-item">快捷键: Alt + T</div>
+      </div>
     </div>
-  </div>
 
-  <div class="section">
-    <h2 class="section-title">使用方法</h2>
-    <div class="shortcuts">
-      <div class="shortcut-item">• 选中文本后点击翻译按钮</div>
-      <div class="shortcut-item">• 右键菜单选择"翻译选中文本"</div>
-      <div class="shortcut-item">• 快捷键: Alt + T</div>
-    </div>
+    <div id="status" class="status" style="display: none;"></div>
   </div>
-
-  <div id="status" class="status" style="display: none;"></div>
 
   <script src="popup.js"></script>
 </body>
